# agent-dotfiles

./: .gitignore  AGENTS.md
skills/automation/apple-notes/: SKILL.md
skills/automation/apple-reminders/: SKILL.md
skills/automation/mem-palace/: SKILL.md
skills/automation/telegram-codex-bot/: SKILL.md
skills/creativity/ascii-art/: SKILL.md
skills/creativity/creative-ideation/: SKILL.md
skills/creativity/excalidraw/: SKILL.md
skills/creativity/hf-papers/: SKILL.md
skills/creativity/p5js/: SKILL.md
skills/developer/devflow-arch/: SKILL.md
skills/developer/devflow-dev/: SKILL.md
skills/developer/devflow-rev/: SKILL.md
skills/developer/frontend-designs/: SKILL.md
skills/developer/gradio-ui/: SKILL.md
skills/developer/hf-cli/: SKILL.md
skills/developer/hf-datasets/: SKILL.md
skills/finance/dayu/: SKILL.md
skills/finance/dayu-installation/: LICENSE.txt  SKILL.md
tools/zotero-add-local-file-plugin/: .gitignore  README.md  bootstrap.js  manifest.json  package-lock.json  package.json  tsconfig.json
tools/zotero-mcp-wrapper/: .gitignore  AGENTS.md  README.md  pyproject.toml
tools/zotero-mcp-wrapper/scripts/: build_macos_binary.sh  live_smoke_test.py
tools/zotero-mcp-wrapper/tests/: test_framing.py  test_local_file_plugin.py  test_proxy_e2e.py  test_request_classifier.py  test_zotero_runtime.py
tools/zotero-mcp-wrapper/tests/stubs/: echo_mcp_server.py
tools/zotero-mcp-wrapper/zotero_mcp_wrapper/: __init__.py  child_process.py  cli.py  config.py  framing.py  local_file_plugin.py  proxy.py  types.py  zotero_runtime.py
(+120 files in other folders)
